--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "google-adk>=1.6.1",
     "logging>=0.4.9.6",
     "pydantic>=2.11.7",
+    "pytest>=8.4.1",
     "ruff>=0.12.5",
 ]
